# mcp-fb-publisher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINKEDIN-DRAFT.md  PUBLISH-NOW.md  README.md  config.example.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/mcp_fb_publisher/: __init__.py  config.py  image_providers.py  meta_client.py  server.py  validator.py
tests/: conftest.py  test_config.py  test_meta_client.py  test_server_tools.py  test_validator.py
